<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MeetUp</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_choice">Cliquez sur un item de la liste</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_horaire">Horaire</string>
    <string name="title_activity_meet_up">MeetUp</string>
    <string name="title_activity_creation_meet_up">CreationMeetUp</string>
    <string name="title_activity_liste_amis">ListeAmis</string>
    <string name="title_activity_amis">Amis</string>
    <string name="title_activity_liste_participants">ListeParticipants</string>

    <string-array name="left_menu_items">
        <item>name</item>
        <item>Horaires</item>
        <item>MeetUp!</item>
        <item>Mes amis</item>
        <item>Paramètres</item>
        <item>Déconnexion</item>
    </string-array>
    
    <string-array name="right_menu_items">
        <item>Francis</item>
        <item>Moman</item>
        <item>Popa</item>
    </string-array>
    
    <string name="status_signed_out">Signed out</string>
    <string name="signed_in_as"></string>
    <string name="sign_out_button_name">Sign out</string>
    <string name="play_services_error">Google Play est indisponible.  L\'application va s\'éteindre.</string>
    <string name="close">Fermer</string>
    
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <string name="dateDebut">Date de début</string>
    <string name="dateFin">Date de fin</string>
    <string name="date">Date</string>
    <string name="heure">Heure</string>
    
    <string name="addFriendsToMeetUp">Inviter des amis</string>
    <string name="createMeetUp">Créer le MeetUp</string>
    
    <string name="btnAjoutMeetUp">Ajouter un MeetUp</string>
    <string name="btnCreerMeetUp">Créer le MeetUp</string>
    <string name="btnModifierMeetUp">Modifier le MeetUp</string>
    
    
    <string name="menu_participer">Je vais participer</string>
    <string name="menu_peut_etre">Je vais peut-être participer</string>
    <string name="menu_refuser">Je ne vais pas participer</string>
    <string name="menu_modifier">Modifier l\'événement</string>
    <string name="menu_supprimer">Supprimer l\'événement</string>
    <string name="menu_voir_participants">Voir les participants</string>
    
    <string name="participe">Je participe</string>
    <string name="neParticipePas">Je ne participe pas</string>
    <string name="choisirParticipation">Choisissez votre participation</string>
    
</resources>
