<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nomEvenement"
        android:hint="Nom de l'évènement"/>
    
    <EditText 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lieuEvenement"
        android:hint="Lieu de l'évènement"/>
    
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dureeEvenement" 
        android:inputType="time"
        android:hint="Durée (en minute)"/>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView 
            android:id="@+id/debutEvenement"
            android:text="@string/dateDebut"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
       
        <Button
            android:id="@+id/dateDebut"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:onClick="onClickDate"
            android:hint="@string/date"
            android:focusable="false" />

        <Button
            android:id="@+id/heureDebut"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:onClick="onClickTime"
            android:hint="@string/heure"
            android:focusable="false" />
         
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView 
            android:id="@+id/finEvenement"
            android:text="@string/dateFin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
       
        <Button
            android:id="@+id/dateFin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:onClick="onClickDate"
            android:hint="@string/date"
            android:focusable="false" />

        <Button
            android:id="@+id/heureFin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:onClick="onClickTime"
            android:hint="@string/heure"
            android:focusable="false" />
         
    </LinearLayout>

    <Button
        android:id="@+id/ajoutAmisEvenement"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="chercherAmis"
        android:text="@string/addFriendsToMeetUp" />

    <Button
        android:id="@+id/creeEvenement"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="creerEvenement"
        android:text="@string/createMeetUp" />

</LinearLayout>
